<resources>
    <string name="app_name">Doancuoiky</string>
    <string name="navigation_open">Open navigation draw</string>
    <string name="navigation_close">Close navigation draw</string>

    <string name="link_instagram">
        <a href="https://www.instagram.com/"> <u>Instagram</u>.</a>
    </string>
    <string name="link_facebook">
        <a href="https://www.facebook.com/profile.php?id=100041273850472">Facebook</a>
    </string>
    <string name="link_linkedin">
        <a href="https://www.linkedin.com/feed/">Linkedin</a>
    </string>
    <string name="link_twitter">
        <a style="text-decoration: underline" href="https://www.instagram.com/">Twitter</a>
    </string>
    <string name="gia"><strike>3.900.000 đ</strike></string>
    <string name="link_playstore">
        <a href="https://play.google.com/store/apps/details?id=csharp.c.programming.coding.learn.development">Play Store</a>
    </string>
</resources>