<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".FollowusActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/zon_cropped"
            android:padding="8dp"
            android:background="@drawable/khungvien"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Version 1.1.1"/>
        <TextView
            android:background="@drawable/duongke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="Td.Ltd"/>
        <TextView
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="26-11-2022 All Right Res"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:background="@drawable/duongke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/instagram_link"
                android:textColor="@color/black"
                android:layout_width="300dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15dp"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/link_instagram"/>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@mipmap/icons8instagram50"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>
        <TextView
            android:background="@drawable/duongke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/facebook_link"
                android:textColor="@color/black"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/link_facebook"/>

            <ImageButton

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@mipmap/icons8facebook50"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <TextView
            android:background="@drawable/duongke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/linkdin_link"
                android:textColor="@color/black"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/link_linkedin"/>
            <ImageButton

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@mipmap/icons8linkedincircled50"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>
        <TextView
            android:background="@drawable/duongke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/twitter_link"
                android:textColor="@color/black"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/link_twitter"/>

            <ImageButton

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@mipmap/icons8twitter50"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <TextView

            android:background="@drawable/duongke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/playstore_link"
                android:textColor="@color/black"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/link_playstore"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@mipmap/icons8googleplay50"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>